@@ -758,10 +758,17 @@ div.varname {
     text-decoration: none;
     color: black;
 }
-
 .wato div.globalvars a:hover {
     text-decoration: underline;
 }
+
+.wato div.globalvars a.modified {
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 3px 3px 5px #A2BECD inset;
+    margin-left: -5px;
+    padding: 0 5px;
+}
+
 
 .wato div.globalvars td.content img.iconbutton {
     width: 60px;
