@@ -12,6 +12,7 @@
 
     WATO:
     * FIX: Fixed "select all" button in hosts & folders for IE
+    * Optically mark modified variables in global settings
 
     Core:
     * FIX: Fixed "make_utf is not defined" error when having custom
